--- a/error.html
+++ b/error.html
@@ -8,6 +8,7 @@
     <p class="lead">Er is iets misgegaan. De pagina die je zoekt, bestaat niet of is tijdelijk onbereikbaar.</p>
     <p class="text-muted">Probeer terug te gaan naar de startpagina.</p>
     <a th:href="@{/index}" class="mt-3 btn btn-success">Terug naar Home</a>
+    <p>error</p>
 </div>
 
 <a href=""></a>
